--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 client.url.service.cupones=https://cs-hsa-api-coupons.herokuapp.com/coupons
-client.url.service.categorias=https://cs-hsa-api-categories.herokuapp.com/categories
+client.url.service.categorias=http://localhost:3101/categories
 server.port=8090
+
