--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,7 +4,7 @@ steps:
   args: [ 'build', '-t', 'gcr.io/concrete-test/psyched-age-295904', '.' ]
   # push container image
 - name: "gcr.io/cloud-builders/docker"
-  args: ["push", "gcr.io/concrete-test/psyched-age-295904:${_TAG}"]
+  args: ["push", "gcr.io/concrete-test/psyched-age-295904:latest"]
   # deploy container image to GKE
 - name: "gcr.io/cloud-builders/kubectl"
   args: ["apply", "-f", "${_DOCKERFILE}/deployments/k8s/"]
