--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,16 @@ version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '8'
 apply plugin: 'jacoco'
 
+docker {
+    name "${project.group}/${jar.baseName}"
+    files jar.archivePath
+    buildArgs(['JAR_FILE': "${jar.archiveName}"])
+}
+
+bootJar {
+    baseName = 'gs-spring-boot-docker'
+    version =  '0.1.0'
+}
 
 jacoco {
     toolVersion = "0.8.2"
