--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,7 @@
 steps:
   # build the container image
-- name: "gcr.io/cloud-builders/docker"
-  args: [ 'build', '-t', 'gcr.io/concrete-test/psyched-age-295904', '.' ]
+- name: gcr.io/cloud-builders/docker
+  args: ['build', '-t', 'gcr.io/concrete-test/psyched-age-295904', '--build-arg=JAR_FILE=build/libs/concrete-0.0.1-SNAPSHOT.jar', '.']
   # push container image
 - name: "gcr.io/cloud-builders/docker"
   args: ["push", "gcr.io/psyched-age-295904/concrete-test:latest"]
